fixing some layout issue. daywise presentation done.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3675,7 +3675,10 @@ video {
   padding: 0 20px;
 }
 .wrapper-content {
+  height: 95vh;
   padding: 70px 0px 40px;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 #page-wrapper {
   min-height: 568px;
@@ -3722,6 +3725,7 @@ ol.unstyled {
     padding: 10px 20px;
     position: fixed;
     right: 0;
+    z-index: 9999;
 }
 .body-small .footer {
     left: 0px;
